@@ -24,8 +24,9 @@ input, textarea, select {
     padding:2px;
     margin:2px;
 	}
-input:focus, textarea:focus, select:focus, option:focus {
+input:focus, textarea:focus, select:focus {
 	border-color:#ff9900;
+    z-index:1000;
 	}
 textarea { 
     width:95%;
@@ -128,7 +129,7 @@ div.hidden {
 	display:none;
 	border:0; margin:0; padding:0;
 	}
-/*the two possible econtainer divs for each book, one after login and one for before*/
+/*the two possible container divs for each book, one after login and one for before*/
 div#bookbox {
 	position:absolute; left:0%; top:0%; width:100%; height:99%; 
 	border-top:3px solid;
