@@ -59,7 +59,7 @@ fieldset.selery {
 	font-size:x-small; font-weight:600;
 	}
 
-/*these are fo rthe grow selery button*/
+/*these are for the grow selery button*/
 button.selery { 
 	width:16px; height:16px; border-style:none;	
 	background-repeat:no-repeat;
